feat: upload bad smell